--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="your_score">Your Score: %1$d</string>
     <string name="time_left">Time left: %1$d</string>
     <string name="game_over_message">Times up! Your score was: %1$d</string>
+
+    <string name="about_title">Timefighter %1$s</string>
+    <string name="about_message">Created by Kevin Hermawan</string>
 </resources>
